<resources>
    <string name="app_name">AppClass</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_login_user">Usuario</string>
    <string name="hint_login_password">Clave</string>
    <string name="login">Iniciar</string>
    <string name="register">Registrar</string>
    <string name="register_title">Registro de usuario</string>
    <string name="register_complete_name">Nombre completo</string>
    <string name="register_email">Correo electrónico</string>
    <string name="register_tel">Teléfono</string>
    <string name="usuario">Usuario</string>
    <string name="clave">Clave</string>
    <string name="registrar">Registrar</string>
    <string name="cancelar">Cancelar</string>
    <string name="materias">Materias</string>
    <string name="agregar_materia">Agregar Materia</string>
    <string name="salir">Salir</string>
    <string name="error_usuario_y_o_clave">Usuario y/o clave erróneos</string>
    <string name="error_usuario_existe">El usuario ya existe en la bd</string>
    <string name="error_claves_no_coinciden">Las claves no coinciden</string>
    <string name="error_faltan_datos">Faltan datos</string>
    <string name="msg_bienvenido">Bienvenido %s</string>
    <string name="materia">Materia</string>
    <string name="imagen_seleccionar">Seleccionar imagen</string>
    <string name="materia_nombre">Nombre de la materia</string>
    <string name="materia_descripcion">Descripción de la materia</string>
    <string name="imagen_camara">Desde cámara</string>
    <string name="imagen_galeria">Desde galería</string>
    <string name="registro_exitoso">Registro exitoso</string>
    <string name="ultimas_asistencia">Ultimas asistencias</string>
    <string name="detalles">Detalles</string>
    <string name="configuracion">Configuracion</string>
    <string name="horarios">Horarios</string>
    <string name="reportes">Reportes</string>
    <string name="alumnos">Alumnos</string>
</resources>
